# Agora

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  agent_routes.py  banking_routes.py  intervention_routes.py  routes.py  world_routes.py
backend/app/data/: __init__.py  eba_calibration.py
backend/app/models/: __init__.py  agent.py  agent_life.py  agent_message.py  bank.py  bank_factory.py  country.py  geopolitical.py  institution.py  interbank_network.py  intervention.py  nonstate_actor.py  political_actor.py  shock.py  simulation.py  world.py  world_event.py
backend/app/services/: __init__.py  agent_factory.py  agent_personas.py  agent_society.py  contagion_engine.py  llm_engine.py  simulation_runner.py  world_engine.py  world_factory.py
backend/app/utils/: __init__.py  logger.py  population_stats.py  world_graph.py
backend/scripts/: action_logger.py  run_banking_sim.py  run_forex_simulation.py  run_macro_shock.py  run_parallel_simulation.py  run_sensitivity.py  run_world_simulation.py  test_agent_profile.py
backend/tests/: test_camel_propagation.py
docs/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: record-demo.sh
src/: camera.h  main.cpp  network.cpp  network.h  renderer.cpp  renderer.h
visualizer/: CMakeLists.txt
visualizer/src/: main.cpp  network.cpp  network.h  renderer.cpp  renderer.h
(+12 files in other folders)
